# Task_Estimator

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: CMakeLists.txt  Dockerfile  Dockerfile.base  main.cpp
backend/model/: task_estimation_model.json
backend/src/: main.cpp
database/: init.sql
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.jsx  styles.css
training/: Dockerfile  advanced_nlp_model.py  hasher.py  init_model.py  requirements.txt  retrain.py  retrain_from_db.py  test.py  train_foundation.py
